test/libsolidity/syntaxTests/pragma/unknown_pragma.sol
pragma thisdoesntexist;
// ----
// SyntaxError: (0-23): Unknown pragma "thisdoesntexist"
